--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^9.0|^10.0",
-        "illuminate/http": "^9.0|^10.0"
+        "illuminate/support": "^9.0|^10.0|^11.0|^12.x",
+        "illuminate/http": "^9.0|^10.0|^11.0|^12.x"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
