--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laraditz/lazada",
+    "name": "trongprot1/lazada",
     "description": "Laravel package for interacting with Lazada API.",
     "keywords": [
         "laraditz",
